[package]
name = "mvm-firecracker-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Per-VM Firecracker bridge sidecar: passt hash verification + seccomp + Landlock confinement + gateway audit bridge (Plan 113 §Task 12, ADR-064)"

# ── What this crate is ─────────────────────────────────────────────
#
# Leaf bin crate that runs alongside every Linux Firecracker microVM
# as the per-VM A2 component (ADR-064 §Decision 5). Sequence:
#
#   1. Read a `BridgeConfigJson` document from stdin (parent =
#      Task 13's `FirecrackerBackend`).
#   2. Verify the `passt` binary SHA256 against the operator-curated
#      `~/.mvm/passt-hashes.toml` allowlist. Fails closed on a missing
#      file, an empty `sha256 = []` list, or a mismatch.
#   3. Apply `mvm_jailer_lite::confine_self()` — seccomp filter +
#      Landlock filesystem confinement (Task 8). After this point the
#      process can only touch the spec's read/write paths and only the
#      allowlisted syscalls.
#   4. Reconstruct the parent-inherited gateway + supervisor
#      `OwnedFd`s, build `BridgeConfig` + `BridgeEndpoints::Passt`, and
#      call `mvm_supervisor::gateway_bridge::spawn_bridge_thread`.
#   5. Park the main thread forever. Task 13's `FirecrackerBackend`
#      watchdog handles teardown via SIGTERM/SIGKILL.
#
# Parallel role to `mvm-libkrun-supervisor` (libkrun on macOS/Linux) and
# `mvm-vz-drainer` (Vz on macOS) for the Firecracker backend on Linux.
# All three link `mvm-supervisor` directly to side-step the
# `mvm-supervisor → mvm-backend → mvm-libkrun` cycle that would close if
# any backend crate pulled `mvm-supervisor` itself.
#
# ADR-064 §Decision 8 — Firecracker reports `payload_tap: true` (the
# bridge has direct access to the virtio-net byte stream via the
# parent-inherited socketpair fds, so payload-tap observers like a
# future SNI inspector can plug into the same `FlowPolicy` seam libkrun
# uses today).
#
# ── Linux-only at runtime ─────────────────────────────────────────
#
# The binary's body is gated behind `#[cfg(target_os = "linux")]` in
# `src/main.rs`; on non-Linux targets `main()` prints a guard message
# and exits 1. This keeps `cargo build --workspace` green for macOS /
# Windows contributors while making the binary itself unmistakably
# Linux-only at runtime.
#
# The `mvm-jailer-lite` dependency is target-gated to Linux because its
# Landlock + seccomp paths are Linux-only (the macOS/Windows stubs
# return `Err(SeccompUnavailable)`). The non-Linux `main()` does not
# call into `mvm-jailer-lite`, so the dep is not pulled at all on
# non-Linux targets.

[[bin]]
name = "mvm-firecracker-bridge"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
mvm-plan = { workspace = true }
mvm-policy = { workspace = true }
mvm-supervisor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
mvm-jailer-lite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
