[package]
name = "mvm-guest"
version.workspace = true
edition.workspace = true
description = "vsock protocol and openclaw connector mapping for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-builder-agent"
path = "src/bin/mvm-builder-agent.rs"

[[bin]]
name = "mvm-guest-agent"
path = "src/bin/mvm-guest-agent.rs"

# Exec-shim that compiles a syscall allowlist into a BPF program via
# seccompiler, applies it via prctl, and execve's into the wrapped
# command. mkServiceBlock wraps every guest service launch with this
# shim so per-service seccomp filters are the default. ADR-002 §W2.4.
[[bin]]
name = "mvm-seccomp-apply"
path = "src/bin/mvm-seccomp-apply.rs"

# Early-userspace init (PID 1) that runs from the verity initramfs
# baked by `mkGuest` when `verifiedBoot = true`. Reads the roothash
# from /proc/cmdline, constructs the dm-verity device-mapper target
# via raw ioctls, mounts it, and switch_roots to the real /init.
# Bypasses Firecracker's auto-appended `root=/dev/vda` by owning the
# boot pivot in userspace. ADR-002 §W3.
[[bin]]
name = "mvm-verity-init"
path = "src/bin/mvm-verity-init.rs"

# Plan 74 W2 — guest-side network defense. Installs kernel blackhole
# routes for `MANDATORY_DENY_RANGES` (cloud metadata, link-local,
# CGNAT, host loopback) inside every microVM. Run as root from
# `/init` BEFORE the agent is forked under setpriv, so the routes
# exist before any workload code can attempt egress. Cross-platform
# (Linux kernel routing is uniform across Firecracker, libkrun,
# Apple Container).
[[bin]]
name = "mvm-guest-netinit"
path = "src/bin/mvm-guest-netinit.rs"

# Test-only probe used by `tests/seccomp_apply.rs` to verify that
# tier allowlists actually deny what they claim (ADR-002 §W2.4). Not
# selected by `nix/packages/mvm-guest-agent.nix`, so it never ships
# in the guest closure.
[[bin]]
name = "syscall-probe"
path = "src/bin/syscall-probe.rs"

# Test fixture for the warm-process worker pool (plan 43). Speaks the
# `worker_protocol` framed multi-call loop on stdin/stdout. Behavior
# selectable via `MVM_FAKE_RUNNER_BEHAVIOR` env var so tests can
# exercise crash, recycle, slow, and malformed-frame paths against a
# real child process. Not selected by the production guest closure.
[[bin]]
name = "fake-runner"
path = "tests/bin/fake_runner.rs"
test = false
doctest = false

# Test fixture for `entrypoint::execute` (plan 41 W2 / ADR-007). A real
# ELF binary used in place of `#!/bin/sh` wrappers in the runner
# integration tests so the production `/proc/self/fd/<n>` argv[0]
# contract is exercised end-to-end on Linux. Behaviour is encoded in a
# stdin header so `execute()`'s `env_clear()` + no-argv shape stays
# identical to production. Not selected by the production guest closure.
[[bin]]
name = "mvm-entrypoint-test-wrapper"
path = "tests/bin/entrypoint_test_wrapper.rs"
test = false
doctest = false

[features]
dev-shell = []

[dependencies]
mvm-core.workspace = true
mvm-security.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
# Phase 10c — readiness/shutdown hook runner uses thiserror for
# typed error variants (ReadinessError, ShutdownError).
thiserror = "1"
tracing.workspace = true
# Plan 74 W2 — the `netinit` module's trait + types + install
# loop + tests are cross-platform; only `RtnetlinkInstaller`
# itself is Linux-only. Keeping async-trait + ipnet in the main
# deps lets the tests run on macOS dev hosts too.
async-trait.workspace = true
ipnet.workspace = true

# seccompiler builds Linux-only — guests are always Linux microVMs,
# but the workspace also compiles on macOS for CLI development. Gate
# the dep so `cargo check` on a Mac doesn't try to build it.
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }
# Plan 74 W2 — `mvm-guest-netinit` uses rtnetlink to install kernel
# blackhole routes for `MANDATORY_DENY_RANGES`. Linux-only because
# rtnetlink talks to AF_NETLINK which doesn't exist elsewhere. The
# host-side mvmctl builds (which include this crate) skip these
# deps on macOS; the binary itself is only relevant in the guest.
rtnetlink = { workspace = true }
tokio = { workspace = true }
# netlink-packet-route is rtnetlink's wire-format types crate. The
# RouteType::BlackHole enum the installer uses comes from here.
netlink-packet-route = "0.19"

[dev-dependencies]
tempfile.workspace = true
# Plan 74 W2 — `netinit` module's tests are async (the
# `RouteInstaller` trait is async). tokio is workspace-shared so
# the extra dev-dep doesn't pull anything new into the lock.
tokio = { workspace = true }

[lints]
workspace = true
