[package]
name = "mvm-host-signer"
version.workspace = true
edition.workspace = true
description = "Host signer subprocess — sole holder of the host signer key (Plan 104 §H-L1.1, ADR-061)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[package.metadata.mvm.architecture]
substrate_server_category = "per-workload broker subprocess substrate"

# One of the three per-VM subprocesses (mvm-broker, mvm-host-signer,
# mvm-audit-signer; ADR-062 dropped mvm-secrets-dispatcher). Runs at
# uid 904. **Sole holder of the host signer key** — the key never
# enters the supervisor's address space (Plan 104 §H-L1.1). The
# supervisor delegates plan signing to this subprocess over a per-VM
# UDS.
#
# W1b.1 ships a software in-memory key path (generated at subprocess
# boot from `OsRng`). The hardware-enclave path (Apple Secure Enclave
# on macOS, TPM 2.0 on Linux) lands in W8 per Plan 104 §H-L2.1.
# `mvmctl doctor` will flag the W1b.1 software-fallback path as a
# claim downgrade once W7/W8 wire the enclave check.

[lib]
name = "mvm_host_signer"
path = "src/lib.rs"

[[bin]]
name = "mvm-host-signer"
path = "src/bin/mvm-host-signer.rs"

[dependencies]
anyhow.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
mvm-core.workspace = true
rand = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
