[package]
name = "mvm-host-vm-init"
version.workspace = true
edition.workspace = true
description = "PID 1 for the libkrun builder VM — mounts /nix, runs /job/cmd.sh, powers off (Plan 72 W3)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# Linux-only by design — this is the in-VM init for the libkrun
# builder VM (Plan 72 W3). The crate compiles on macOS / Windows
# but produces an inert binary (main() prints a hint and exits 1)
# so workspace builds stay green on developer hosts. mkGuest
# cross-compiles the real binary for `<arch>-unknown-linux-musl`
# from a Linux nix-build environment.

[[bin]]
name = "mvm-host-vm-init"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux mount/reboot syscalls. Kept Linux-only so non-Linux
# workspace builds don't drag in the dep tree.
nix = { version = "0.29", features = ["mount", "reboot", "signal", "ioctl"] }
# libc for SIGTERM / SIGKILL when tearing the egress proxy down
# after the installer exits. Linux-only same as nix above.
libc.workspace = true

[dev-dependencies]
# Test scratch dirs + JSON parsing for assertions against the
# hand-rolled `InstallReport::to_json` output. Production builds
# never see these — they live behind `cfg(test)` only.
tempfile.workspace = true
serde_json.workspace = true
# Plan 89 W2 part 3 — the cross-validation test in
# `dispatch_response::tests::dispatch_response_parses_as_typed_builder_response`
# deserializes our hand-rolled JSON as
# `mvm_build::builder_protocol::HostVmResponse` to pin the two
# wire shapes together. Dev-only; doesn't pull mvm-build into the
# production rootfs.
mvm-build.workspace = true
# Plan 89 W3 part 2 — same rationale: the cross-validation test in
# `builder_request::tests::parses_what_mvm_build_serializes_with_serde`
# constructs typed `mvm_build::builder_protocol::HostVmRequest`
# values via `JobId(Uuid::nil())`. Dev-only.
uuid.workspace = true

[lints]
workspace = true

# Static + tiny per Plan 72 §W3 size budget (≤ 1.5 MiB on
# aarch64-linux). Release profile inherits from workspace; this
# crate doesn't override.
