[package]
name = "mvm-ir"
description = "Canonical Workload IR for the mvm SDK. Ported from mvmforge-ir per plan 60 Phase 5."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
schemars = "0.8"

# Ported from mvmforge-ir as a cross-repo dev-dep on `mvm-guest`'s
# RuntimeConfig types. Now in-workspace: drift detection between
# mvm-ir's emitted shapes and mvm-guest's parser is automatic on
# every `cargo test`, no git-rev bumping needed.
[dev-dependencies]
mvm-guest = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "emit_workload_schema"
path = "src/bin/emit_schema.rs"
