[package]
name = "mvm-jailer-lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "mvm_jailer_lite"
path = "src/lib.rs"

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
