[package]
name = "mvm-jailer-lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "mvm_jailer_lite"
path = "src/lib.rs"

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Property tests (`tests/seccomp_property.rs`, `tests/landlock_property.rs`)
# use `#[ctor::ctor]` to detect a `SECCOMP_PROBE=1` re-spawn before
# `main` runs (the seccomp test can't apply confinement from inside
# the test process — `SeccompAction::Trap` would kill the harness).
# The libc workspace dep is the runtime side of the seccomp number
# table; making it visible to dev-deps lets integration tests
# reference `libc::SIGSYS` / `libc::EACCES` directly. Both deps are
# only meaningful on Linux (the test files are
# `#![cfg(target_os = "linux")]`), so they compile to no-ops on
# non-Linux contributor hosts.
ctor = "0.2"
libc = { workspace = true }

[lints]
workspace = true
