[package]
name = "mvm-libkrun-supervisor"
version.workspace = true
edition.workspace = true
description = "Per-VM supervisor binary that boots a libkrun guest and runs the per-tenant gateway audit bridge (Plan 102 W6.A.5)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# ── What this crate is ─────────────────────────────────────────────
#
# Leaf bin crate that links `mvm-libkrun` (libkrun FFI + boot path)
# AND `mvm-supervisor` (gateway audit bridge + audit chain + flow
# policy). Lives outside `mvm-libkrun` because adding `mvm-supervisor`
# to `mvm-libkrun`'s deps would close the cycle
# `mvm-supervisor → mvm-backend → mvm-libkrun`. As a leaf (nothing
# depends on this crate), it can pull both sides freely.
#
# The binary name stays `mvm-libkrun-supervisor` so
# `mvm-backend::libkrun::resolve_supervisor_path()` (the spawner)
# keeps finding it. The on-stdin JSON contract (`SupervisorConfig`)
# is unchanged in this commit; Plan 102 W6.A.5 commit 2 widens it
# with optional plan/bundle fields the bridge factory consumes.

[dependencies]
# libkrun bindings, KrunContext, SupervisorConfig, run_supervisor.
# The `libkrun-sys` feature on this dep is enabled transitively by
# this crate's own `libkrun-sys` feature so the workspace's default
# `cargo check --workspace` (no features) skips bindgen + libkrun
# linkage on hosts without libkrun.h — mirrors the pre-split
# `required-features = ["libkrun-sys"]` gate on the old `[[bin]]`.
mvm-libkrun.workspace = true
# Codesigning gate on macOS (`apple_container::ensure_signed`).
mvm-providers.workspace = true
serde_json.workspace = true

[features]
default = []
# Opt-in: build the supervisor binary against libkrun's FFI.
# Required to actually run this crate's bin; without it the binary
# compiles but `run_supervisor` returns `Error::NotYetWired` and
# the lib.rs `configure_*` helpers are absent.
libkrun-sys = ["mvm-libkrun/libkrun-sys"]

[[bin]]
name = "mvm-libkrun-supervisor"
path = "src/main.rs"
required-features = ["libkrun-sys"]

[lints]
workspace = true
