[package]
name = "mvm-libkrun"
version.workspace = true
edition.workspace = true
description = "Rust bindings for the Red Hat libkrun C library (Linux KVM, macOS HVF)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
build = "build.rs"

# ── What this crate is ─────────────────────────────────────────────
#
# Thin Rust bindings + a safe wrapper around Red Hat libkrun's C API.
# libkrun is a library-style VMM: linked directly into the calling
# binary, no out-of-process daemon. On Linux it uses KVM; on macOS it
# uses Hypervisor.framework. mvm uses it as a Tier 2 microVM backend
# and (post-Plan-71) the builder-VM substrate.
#
# Two build modes:
#
#   * default (no feature) — no FFI, no link to libkrun. `start`/`stop`
#     return `Error::NotYetWired`. The workspace builds cleanly on hosts
#     without libkrun installed.
#
#   * `libkrun-sys` — bindgen-generated FFI + `-lkrun` link. Requires
#     libkrun.h on the host (probed by build.rs at the standard install
#     locations) and a working libkrun shared library at link time.
#
# Plan 57 W1 lands the bindings; W2 adds macOS codesigning entitlements;
# W3 validates an end-to-end boot. This crate stays narrowly focused on
# the FFI surface — backend dispatch lives in mvm-backend.

[dependencies]
libc.workspace = true
tracing = "0.1"
# `serde` is always on (with `derive`) so the `KrunContext`,
# `KrunDisk`, and `SupervisorConfig` types are serializable from
# any consumer — notably `mvm-backend::LibkrunBackend`, which
# builds the supervisor's JSON without ever enabling `libkrun-sys`
# itself. Compile cost is marginal; serde is already in nearly
# every other workspace crate's dep graph.
serde = { workspace = true }
# Plan 57 W4 supervisor binary (`src/bin/mvm-libkrun-supervisor.rs`)
# needs JSON parsing on stdin and pulls `ensure_signed()` from
# mvm-providers (macOS codesigning gate). Both are optional and
# gated on `libkrun-sys` so the default workspace build (CI fast
# lane, hosts without libkrun.h) skips the heavier dep graph.
#
# We intentionally do NOT pull `mvm-guest` from regular deps: that
# would close a cycle (mvm-core → mvm-libkrun → mvm-guest → mvm-core,
# since mvm-core depends on mvm-libkrun for `Platform::has_libkrun`).
# The supervisor receives the vsock port list via the JSON config —
# the symbolic `GUEST_AGENT_PORT` constant is only needed by callers
# composing the config, not by the supervisor consuming it. The
# `libkrun-smoke` example keeps `mvm-guest` as a dev-dep because
# dev-deps are excluded from cycle analysis.
mvm-providers = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
# `bindgen` is required only when the `libkrun-sys` feature is on; we
# still list it unconditionally so the crate manifest reflects the real
# build-time graph. The build script returns early when the feature is
# off, so libclang isn't invoked in the default workspace build.
bindgen = "0.72"

[features]
default = []
# Opt-in: generate FFI bindings and link `libkrun`. Off by default so
# the workspace builds on hosts without libkrun installed (CI fast lane,
# Linux contributors who don't run the Tier 2 backend). Enables the
# supervisor binary and its mvm-guest/mvm-providers/serde dep chain.
libkrun-sys = [
    "dep:mvm-providers",
    "dep:serde_json",
]

[dev-dependencies]
# The plan 57 W3 smoke example shares `GUEST_AGENT_PORT` with the
# production vsock plumbing.
mvm-guest.workspace = true
# `ensure_signed()` is plan 57 W2's codesigning gate. macOS rejects
# any process that calls `Hypervisor.framework` without
# `com.apple.security.hypervisor`; the smoke binary self-signs on
# first run and re-spawns, same as `mvmctl up --hypervisor
# apple-container` does.
mvm-providers.workspace = true
# Plan 72 W4 prerequisite: unit tests for `KrunContext`'s serde
# shape (incl. the new `virtio_fs_mounts` field with `#[serde(default)]`
# back-compat) exercise the JSON pipe shape the supervisor binary
# carries. serde_json is already an optional regular dep behind
# `libkrun-sys`; listing it again as a dev-dep makes the test build
# independent of feature flags.
serde_json = { workspace = true }

# Plan 57 W3 — manual smoke binary that boots a Nix-built kernel +
# ext4 rootfs via libkrun and blocks until the guest exits. Gated on
# `libkrun-sys` so the example only compiles on hosts with libkrun.h
# present.
[[example]]
name = "libkrun-smoke"
path = "examples/libkrun-smoke.rs"
required-features = ["libkrun-sys"]

# Plan 57 W4 — long-running supervisor process. One process per
# libkrun guest. Reads a JSON `SupervisorConfig` on stdin, binds host
# vsock listeners, writes its PID under ~/.mvm/vms/<name>/, then
# `start_enter`s the guest. The W4.2 PR wires
# `LibkrunBackend::start()` to spawn this binary.
[[bin]]
name = "mvm-libkrun-supervisor"
path = "src/bin/mvm-libkrun-supervisor.rs"
required-features = ["libkrun-sys"]

[lints]
workspace = true
