[package]
name = "mvm-mesh-dns"
version.workspace = true
edition.workspace = true
description = "In-guest DNS resolver for *.mesh.local — paired with mvmforge ADR-0018 / ADR-0020. Iroh-free."
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-mesh-dns"
path = "src/bin/mvm-mesh-dns.rs"

[dependencies]
mvm-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# hickory-dns: mature, audited DNS resolver/server. Used by Cloudflare's
# Pingora. Pinned in Cargo.lock per ADR-0018 §Dependency hygiene.
hickory-server = "0.24"
hickory-proto = "0.24"

[dev-dependencies]
tempfile.workspace = true
