[package]
name = "mvm-mesh-vsock-bridge"
version.workspace = true
edition.workspace = true
description = "In-guest TCP↔vsock bridge for outbound mesh traffic. Iroh-free; capability tokens stay on the host (mvmd-agent)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-mesh-vsock-bridge"
path = "src/bin/mvm-mesh-vsock-bridge.rs"

[dependencies]
mvm-core.workspace = true
anyhow.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
