[package]
name = "mvm-oci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "OCI image distribution client for mvm — registry resolution, manifest fetch, digest verification, layer fetch with streaming + size caps. Layer unpack to ext4 and rootfs materialization land in later plan 74 W1 PRs."

[dependencies]
async-trait = "0.1"
hex.workspace = true
# Plan 85 Phase A — `libc::O_NOFOLLOW` for the O_NOFOLLOW open flag.
# Used in `unpack::write_regular_file` so a tar entry whose target
# parent chain *appears* clean still can't be redirected through a
# concurrently-planted symlink between the parent-chain check and
# the open(2) call.
libc = { workspace = true }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
rustix = { version = "1.1", features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# Plan 85 Phase A — layer-to-tree unpacker. We use `tar::Archive` to
# iterate entries but never call `entry.unpack()` (it bypasses the
# Plan 85 §"Security envelope" allow-lists); each entry's header
# drives a manual write through our own safety-checking helpers.
tar = { workspace = true }
thiserror = "1"
tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }
url = "2"
xattr = { workspace = true }

[dev-dependencies]
# Plan 85 Phase A tests build in-memory tar fixtures into a temp
# tree and assert post-unpack invariants.
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt", "rt-multi-thread", "test-util", "time"] }
# Hermetic OCI registry fixture — wiremock spawns a real HTTP
# server on a random localhost port. We point our client at it
# with `ClientConfig { protocol: HttpsExcept(["127.0.0.1:N"]) }`
# so the same fetcher exercises the same code paths it would
# against ghcr.io / docker.io.
wiremock = "0.6"

[lints]
workspace = true
