[package]
name = "mvm-providers"
version.workspace = true
edition.workspace = true
description = "Virtualization-framework primitives for mvm — libkrun bindings, Apple VZ FFI"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
build = "build.rs"

# ── What this crate is ─────────────────────────────────────────────
#
# The internal FFI / SDK shim layer between mvm-backend (which
# implements `VmBackend`) and the underlying virtualization frameworks.
# Each module wraps one framework:
#
#   libkrun         — Red Hat libkrun C library (Linux KVM + macOS HVF)
#   apple_container — Apple Virtualization.framework via objc2 + Swift
#
# Future modules: cloud_hypervisor (FFI shim), windows_wfp, etc.
#
# This is NOT the user-facing "Provider" concept from ADR-012 — that
# concept (linux/mlx as user-selectable execution targets) lives in
# mvmd. The two share a name but address different layers; ADR-012
# carries the disambiguation note.

[dependencies]
tracing = "0.1"
libc.workspace = true

# Apple VZ (macOS only) — objc2 bindings + Swift bridge.
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSError"] }
objc2-virtualization = { version = "0.3", features = [
    "VZBootLoader",
    "VZLinuxBootLoader",
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZVirtioBlockDeviceConfiguration",
    "VZStorageDeviceConfiguration",
    "VZDiskImageStorageDeviceAttachment",
    "VZNetworkDeviceConfiguration",
    "VZVirtioNetworkDeviceConfiguration",
    "VZNATNetworkDeviceAttachment",
    "VZNetworkDeviceAttachment",
    "VZVirtioEntropyDeviceConfiguration",
    "VZEntropyDeviceConfiguration",
    "VZSerialPortConfiguration",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZSerialPortAttachment",
    "VZFileHandleSerialPortAttachment",
    "VZMemoryBalloonDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZSocketDevice",
    "VZSocketDeviceConfiguration",
    "VZVirtioSocketDevice",
    "VZVirtioSocketDeviceConfiguration",
    "VZVirtioSocketConnection",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
